# svm

./: .gitmodules  README.md  a.out
ants/: CMakeLists.txt
ants/src/: ant.c  ant.h  box.c  box.h  brain.c  brain.h  brain_ann.c  brain_atr.c  brain_shorts.h  brain_svm.c  engine.c  engine.h  food.c  food.h  globals.h  main.c  utils.c  utils.h  world.c  world.h
simple/: svm.c  svm.py
